fixed word wrapping & trimming (if text is too long for short display)

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
     max-width: 800px;
+    word-wrap: break-word;
     margin: auto;
 }
 
